# ClawCode

./: Dockerfile  clawcode-providers.toml  clawcode-router.docker.toml  clawcode-router.toml  docker-entrypoint.sh
rust/crates/discord/: Cargo.toml
rust/crates/discord/src/: lib.rs
rust/crates/minibook/: Cargo.toml
rust/crates/minibook/src/: lib.rs  types.rs
rust/crates/providers/: Cargo.toml
rust/crates/providers/src/: anthropic_adapter.rs  config.rs  lib.rs  ollama.rs  openrouter.rs
rust/crates/router/: Cargo.toml
rust/crates/router/src/: config.rs  dispatch.rs  main.rs
rust/crates/runtime/src/: conversation.rs
rust/crates/rusty-claude-cli/: Cargo.toml
rust/crates/rusty-claude-cli/src/: main.rs
