[package]
name = "rusty-claude-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
api = { path = "../api" }
atty = "0.2"
commands = { path = "../commands" }
compat-harness = { path = "../compat-harness" }
providers = { path = "../providers" }
crossterm = "0.28"
pulldown-cmark = "0.13"
runtime = { path = "../runtime" }
serde_json = "1"
syntect = "5"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
tools = { path = "../tools" }

[lints]
workspace = true
